# omclone

./: .gitignore  Cargo.toml  LICENSE  OM2022_TransmutationCX.puzzle  README  README.md  ompuzzle.hexpat  omsolution.hexpat  setup.sh  tensorboard.hexpat
html/: cx_checker.html
images/: Glyphs.xcf  Glyphs_256.xcf  hexgrid.xcf
omnn_feature/: Cargo.toml
omnn_feature/src/: lib.rs
omnn_feature_derive/: Cargo.toml
omnn_feature_derive/src/: lib.rs
python/: Untitled.ipynb  export_model.py  merge.py  model.py  repl.py  train.py
pytorch/: common.py  continuous_train.py  export_model.py  merge.py  model.py  tb_trim.py  train.py
src/: basic_frag.fs  basic_vert.vs  benchmark.rs  check.rs  cx_checker.rs  default_paths.txt  eval.rs  export_png.rs  gen_train.rs  hab_checker.rs  lib.rs  main.rs  nn.rs  nonnan.rs  parser.rs  render_library.rs  render_sim.rs  repl.rs  revgen.rs  search.rs  search_history.rs  search_state.rs  seed_solver.rs  sim.rs  solver.rs  synth.rs  tb_trim.rs  test.rs  text_frag.fs  text_vert.vs  train.rs  ui.rs  utils.rs  uv_frag.fs  uv_vert.vs
