[package]
name = "omclone"
version = "0.1.0"
edition = "2021"
default-run = "omclone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["editor_ui"]
#choose one of the following
benchmark = []
editor_ui = ["display_ui"]
display_ui = ["egui", "miniquad", "egui-miniquad", "image", "fontdue"]

[[bin]]
name="omclone"
required-features = ["display_ui"]
path = "src/main.rs"

[[bin]]
name="omclone_benchmark"
required-features = ["benchmark"]
path = "src/benchmark.rs"

[profile.dev]
opt-level = 3
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1.5"

[dependencies]
slotmap = "1.0"
bitflags = "1.3"
nalgebra = "0.30"
num-traits = "0.2"
enum-primitive-derive = "0.2.2"
rustc-hash = "1.1"
smallvec = "1.8"


egui = {version = "0.18", optional = true}
#Changes: don't reborrow globals on wasm clipboard_get()
miniquad = { git = "https://github.com/ssk97/miniquad", branch = "master", optional = true}
fontdue = { version = "0.7", optional = true}
egui-miniquad = {git = "https://github.com/ssk97/egui-miniquad.git", branch = "master", optional = true}
image = {version = "0.24.1", optional = true, default-features = false, features = ["png"]}

#wasm-bindgen = {version = "0.2.74", optional = true}
#web-sys = {version = "0.3.56", optional = true}
#console_error_panic_hook = { version = "0.1.6", optional = true }


color-eyre = {version = "0.6", optional = true}
simple-eyre = "0.3"