[package]
name = "omclone"
version = "0.1.0"
edition = "2021"
default-run = "omclone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["benchmark", "editor_ui", "display_ui", "color_eyre", "search", "torch"]
tracy = [ "tracy-client/enable",
          "tracy-client/system-tracing",
          "tracy-client/context-switch-tracing",
          "tracy-client/sampling",
          "tracy-client/code-transfer",
          "tracy-client/broadcast",
          "tracy-client/callstack-inlines",
          "tracy-client/demangle"]
benchmark = []
editor_ui = ["display_ui"]
display_ui = ["egui", "miniquad", "egui-miniquad", "image", "fontdue"]
bindgen = ["wasm-bindgen","web-sys","console_error_panic_hook"]
color_eyre = ["color-eyre"]
search = ["rayon"]
torch = ["search", "tch", "nvml-wrapper"]

[[bin]]
name="omclone"
path = "src/main.rs"

[profile.dev]
opt-level = 3
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1.5"

[dependencies]
slotmap = "1.0"
bitflags = "2.6"
nalgebra = "0.33"
num-traits = "0.2"
enum-primitive-derive = "0.3.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
rustc-hash = "2.0"
smallvec = "1.11"
tch = {version = "0.17.0", optional = true}
nvml-wrapper = {version = "0.10.0", optional = true}
uuid = "1.10"
rayon = {version = "1.10", optional = true}
indexmap = "2"
union-find = "0.4"
tracy-client = {version = "0.17.4", default-features = false}
atomic_float = "1.1"
enum-iterator = "2.1"
ordered-float = "4.3"

# https://github.com/rust-lang/rust/issues/109737
once_cell = "1.20"

egui = {version = "0.27", optional = true}
miniquad = { version = "0.4", optional = true}
fontdue = { version = "0.9", optional = true}
#egui-miniquad = {version = "0.14", optional = true}
egui-miniquad = { git = "https://github.com/sornas/egui-miniquad", rev="cf599784e20322d335f53f6b678948b4d43c6776", optional = true }
image = {version = "0.25", optional = true, default-features = false, features = ["png"]}

wasm-bindgen = {version = "0.2.84", optional = true}
web-sys = {version = "0.3.61", optional = true}
console_error_panic_hook = { version = "0.1.7", optional = true }

color-eyre = {version = "0.6", optional = true}
simple-eyre = "0.3"
eyre = "0.6"

[lints.clippy]
collapsible_else_if = "allow"
too_many_arguments = "allow"
